5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1728_2496.log
== TEST (2019-05-08 19:12:09) 
-- CODE:
x = int(input("digite o numero: "))
y = input("valor da soma:")

while (x != -1):
-- ERROR:
File "XXXX", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:12:31) 
-- CODE:
x = int(input("digite o numero: "))
y = input("valor da soma:")
while (x != -1):
-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:12:56) 
-- CODE:
x = int(input("digite o numero: "))
y = input("valor da soma:")
while (x != -1):
-- EXECUTION TIME:
0.136968
-- ERROR:
  File "/home/codebench/codes/1728/2496/main.py", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:12:59) 
-- CODE:
x = int(input("digite o numero: "))
y = input("valor da soma:")
while (x != -1):
-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:13:29) 
-- CODE:
x = int(input("digite o numero: "))
y = input("valor da soma:")


while (x != -1):
-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:08:09) 
-- CODE:
num =(input("digite o numero: "))


soma = 0

while(num != -1)
	soma = num + soma
	num = input("digite o numero: ")
print(soma)
-- ERROR:
File "XXXX", line 6
    while(num != -1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:08:28) 
-- CODE:
num =(input("digite o numero: "))


soma = 0

while(num != -1):
	soma = num + soma
	num = input("digite o numero: ")
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = num + soma
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:08:41) 
-- CODE:
num =(input("digite o numero: "))


soma = 0

while(num != -1):
	soma = num + soma
	num = input("digite o numero: ")
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = num + soma
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:09:48) 
-- CODE:
num =(input("digite o numero: "))


soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = num + soma
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:10:56) 
-- CODE:
num =int(input("digite o numero: "))


soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:11:10) 
-- CODE:
num =int(input("digite o numero: "))


soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("digite o numero: "))
print(soma)
-- EXECUTION TIME:
0.140763
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
